--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "prepare": "husky install",
-    "lint:format": "npx --no-install lint-staged && npx --no-install pretty-quick --staged"
+    "lint:format": "npx --no-install lint-staged && npx --no-install pretty-quick --staged",
+    "client:deploy": "sls client deploy --no-confirm --no-config-change --no-policy-change --no-cors-change",
+    "cloudfront:deploy": "sls deploy",
+    "cloudfront:remove": "sls remove",
+    "cloudfront:invalidateCache": "sls invalidateCloudFrontCache"
   },
   "private": true,
   "dependencies": {
@@ -25,6 +29,9 @@
     "@angular/router": "~12.0.0",
     "bootstrap": "^4.6.0",
     "rxjs": "~6.6.0",
+    "serverless": "^3.27.0",
+    "serverless-finch": "^4.0.0",
+    "serverless-single-page-app-plugin": "file:./serverless-single-page-app-plugin",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
