--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "serverless-finch": "^4.0.0",
     "serverless-single-page-app-plugin": "file:./serverless-single-page-app-plugin",
     "tslib": "^2.0.0",
+    "uuid": "^9.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -48,6 +49,7 @@
     "@commitlint/config-conventional": "^12.1.4",
     "@types/jasmine": "^3.6.11",
     "@types/node": "^14.17.0",
+    "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "4.23.0",
     "@typescript-eslint/parser": "4.23.0",
     "eslint": "^7.26.0",
